Atualização dos Tickets, agora temos o estilo e novo estilo de datas

--- a/_src/css/custom-icon.css
+++ b/_src/css/custom-icon.css
@@ -2,7 +2,7 @@
 /* Icon mouse animation */
 
 .custom-icon-mouse {
-	border: 2px solid #000;
+	border: 2px solid #03a9f4;
 	border-radius: 16px;
 	cursor: pointer;
 	display: block;
@@ -11,7 +11,16 @@
 	opacity: 0.8;
 	position: relative;
 	width: 24px;
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-ms-transition: all .3s;
+	-o-transition: all .3s;
+	transition: all .3s;
 	z-index: 10;
+}
+
+.custom-icon-mouse:hover {
+	background-color: #03a9f4;
 }
 
 /* Mouse animation with wheel (circle) */
@@ -60,22 +69,31 @@
 }
 
 .custom-icon-mouse .arrow {
-	border-bottom: 2px solid black;
-	border-right: 2px solid black;
+	border-bottom: 2px solid #0091ea;
+	border-right: 2px solid #0091ea;
 	height: 4px;
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
 	top: 4px;
 	transform: rotate(45deg);
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-ms-transition: all .3s;
+	-o-transition: all .3s;
+	transition: all .3s;
 	width: 4px;
+}
+
+.custom-icon-mouse:hover .arrow {
+	border-color: #ffffff;
 }
 
 /* Mouse tooltip */
 
 .custom-icon-mouse .tooltip {
 	display: block;
-	background: #00b0ff;
+	background-color: #03a9f4;
 	border-radius: 2px;
 	color: #fff;
 	font-size: 1em;
