--- a/_src/css/lineup-artist.css
+++ b/_src/css/lineup-artist.css
@@ -18,11 +18,48 @@
 	/*margin: 0 auto;*/
 }
 
+/* Lineup Artist inner */
+
+.LineupArtist-inner {
+	display: none;
+	-webkit-flex-flow: column;
+	flex-flow: column;
+}
+
+.is-showingMore .LineupArtist-inner {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+}
+
 /* Lineup Artist image */
 
 .LineupArtist-figure {
+	padding: 0 1em;
 	position: relative;
-	height: 36em;
+	height: 16em;
+}
+
+.LineupArtist--zoomBoxx .LineupArtist-figure {
+	padding-left: 2.25em;
+}
+
+.LineupArtist--donnaBanda .LineupArtist-figure {
+	padding-left: 1.5em;
+}
+
+.LineupArtist--mcMigue .LineupArtist-figure {
+	padding-left: 0;
+}
+
+.LineupArtist--pagodeDoNova .LineupArtist-figure {
+	padding-left: 2.25em;
+}
+
+.LineupArtist--djRenatinho .LineupArtist-figure {
+	padding-left: 1.5em;
 }
 
 /* Lineup Artist image img element */
@@ -48,27 +85,66 @@
 
 .LineupArtist-figure figcaption {
 	bottom: 0;
-	left: 50%;
+	left: 25%;
 	position: absolute;
-	padding-bottom: 3em;
-	padding-left: 3em;
+	padding-bottom: 2.25em;
+	padding-left: 1em;
 }
+
+.LineupArtist--zoomBoxx .LineupArtist-figure figcaption {
+	left: 50%;
+	padding-bottom: 2.25em;
+}
+
+.LineupArtist--donnaBanda .LineupArtist-figure figcaption {
+	left: 42%;
+	padding-bottom: 1em;
+}
+
+.LineupArtist--mcMigue .LineupArtist-figure figcaption {
+	left: 40%;
+	padding-bottom: 1em;
+}
+
+.LineupArtist--pagodeDoNova .LineupArtist-figure figcaption {
+	left: 25%;
+	padding-bottom: 0;
+}
+
+.LineupArtist--djRenatinho .LineupArtist-figure figcaption {
+	left: 35%;
+	padding-bottom: 1em;
+}
+
+/* Lineup Artist image figcaption span element */
 
 .LineupArtist-figure figcaption > span {
 	color: #80d8ff;
 	font-family: "proxima-nova-alt", "proxima-nova", sans-serif;
-	font-size: 3.75em;
+	font-size: 1.5em;
 	font-style: italic;
 	font-weight: 800;
 	line-height: .96;
 }
 
-.LineupArtist--pagodeDoNova .LineupArtist-figure figcaption > span {
+.LineupArtist--zoomBoxx .LineupArtist-figure figcaption > span {
 	font-size: 2.25em;
 }
 
-.LineupArtist--djRenatinho .LineupArtist-figure figcaption > span {
+.LineupArtist--donnaBanda .LineupArtist-figure figcaption > span {
 	font-size: 2.25em;
+}
+
+.LineupArtist--mcMigue .LineupArtist-figure figcaption > span {
+	font-size: 3em;
+}
+
+.LineupArtist--pagodeDoNova .LineupArtist-figure figcaption > span {
+	font-size: 1.5em;
+}
+
+.LineupArtist--djRenatinho .LineupArtist-figure figcaption > span {
+	font-size: 1.5em;
 }
 
 /* Lineup nowrap */
@@ -80,26 +156,64 @@
 /* Lineup Artist description */
 
 .LineupArtist-description {
-	padding: 4.5em 0 1em 1em;
-	max-width: 24em;
+	padding: 1em 1.5em 0;
+	width: 100%;
 }
 
 .LineupArtist-description p {
 	color: #80d8ff;
 	font-family: "proxima-nova", sans-serif;
-	font-size: 1.5em;
+	font-size: 1.125em;
 	font-weight: 700;
 }
 
-.LineupArtist-inner {
-	display: none;
-	padding-bottom: 3em;
-}
+@media (min-width: 48em) {
 
-.is-showingMore .LineupArtist-inner {
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
+	/* Lineup Artist inner */
+
+	.LineupArtist-inner {
+		-webkit-flex-flow: row nowrap;
+		flex-flow: row nowrap;
+		padding-bottom: 3em;
+	}
+
+	/* Lineup Artist image */
+
+	.LineupArtist-figure {
+		height: 36em;
+	}
+
+	/* Lineup Artist image figcaption element */
+
+	.LineupArtist-figure figcaption {
+		left: 50%;
+		padding-bottom: 3em;
+		padding-left: 3em;
+	}
+
+	.LineupArtist-figure figcaption > span {
+		font-size: 3.75em;
+		font-weight: 800;
+		line-height: .96;
+	}
+
+	.LineupArtist--pagodeDoNova .LineupArtist-figure figcaption > span {
+		font-size: 2.25em;
+	}
+
+	.LineupArtist--djRenatinho .LineupArtist-figure figcaption > span {
+		font-size: 2.25em;
+	}
+
+	/* Lineup Artist description */
+
+	.LineupArtist-description {
+		padding: 4.5em 0 1em 1em;
+		max-width: 24em;
+	}
+
+	.LineupArtist-description p {
+		font-size: 1.5em;
+	}
+
 }
