--- a/_src/css/lineup-artist.css
+++ b/_src/css/lineup-artist.css
@@ -21,9 +21,13 @@
 /* Lineup Artist inner */
 
 .LineupArtist-inner {
+	-webkit-align-items: center;
+	align-items: center;
 	display: none;
 	-webkit-flex-flow: column;
 	flex-flow: column;
+	width: 100%;
+	max-width: 72em;
 }
 
 .is-showingMore .LineupArtist-inner {
@@ -177,10 +181,21 @@
 		padding-bottom: 3em;
 	}
 
+	.LineupArtist--eletronicSunset .LineupArtist-inner {
+		-webkit-justify-content: center;
+		justify-content: center;
+		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
+	}
+
 	/* Lineup Artist image */
 
 	.LineupArtist-figure {
 		height: 36em;
+	}
+
+	.LineupArtist--eletronicSunset .LineupArtist-figure {
+		height: 21em;
 	}
 
 	/* Lineup Artist image figcaption element */
@@ -191,10 +206,18 @@
 		padding-left: 3em;
 	}
 
+	.LineupArtist--eletronicSunset .LineupArtist-figure figcaption {
+		padding-left: 2.25em;
+	}
+
 	.LineupArtist-figure figcaption > span {
 		font-size: 3.75em;
 		font-weight: 800;
 		line-height: .96;
+	}
+
+	.LineupArtist--eletronicSunset .LineupArtist-figure figcaption > span {
+		font-size: 2.25em;
 	}
 
 	.LineupArtist--pagodeDoNova .LineupArtist-figure figcaption > span {
