Adição do Eletronic Sunset

--- a/_src/css/lineup-artist.css
+++ b/_src/css/lineup-artist.css
@@ -21,8 +21,6 @@
 /* Lineup Artist inner */
 
 .LineupArtist-inner {
-	-webkit-align-items: center;
-	align-items: center;
 	display: none;
 	-webkit-flex-flow: column;
 	flex-flow: column;
@@ -56,6 +54,10 @@
 
 .LineupArtist--mcMigue .LineupArtist-figure {
 	padding-left: 0;
+}
+
+.LineupArtist--eletronicSunset .LineupArtist-figure {
+	padding-left: 3em;
 }
 
 .LineupArtist--pagodeDoNova .LineupArtist-figure {
@@ -108,6 +110,11 @@
 .LineupArtist--mcMigue .LineupArtist-figure figcaption {
 	left: 40%;
 	padding-bottom: 1em;
+}
+
+.LineupArtist--eletronicSunset .LineupArtist-figure figcaption {
+	left: 40%;
+	padding-bottom: 1.5em;
 }
 
 .LineupArtist--pagodeDoNova .LineupArtist-figure figcaption {
