--- a/_src/css/tonovaso.css
+++ b/_src/css/tonovaso.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'tonovaso';
-  src: url('../font/tonovaso.eot?9989613');
-  src: url('../font/tonovaso.eot?9989613#iefix') format('embedded-opentype'),
-       url('../font/tonovaso.woff2?9989613') format('woff2'),
-       url('../font/tonovaso.woff?9989613') format('woff'),
-       url('../font/tonovaso.ttf?9989613') format('truetype'),
-       url('../font/tonovaso.svg?9989613#tonovaso') format('svg');
+  src: url('../font/tonovaso.eot?48694808');
+  src: url('../font/tonovaso.eot?48694808#iefix') format('embedded-opentype'),
+       url('../font/tonovaso.woff2?48694808') format('woff2'),
+       url('../font/tonovaso.woff?48694808') format('woff'),
+       url('../font/tonovaso.ttf?48694808') format('truetype'),
+       url('../font/tonovaso.svg?48694808#tonovaso') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'tonovaso';
-    src: url('../font/tonovaso.svg?9989613#tonovaso') format('svg');
+    src: url('../font/tonovaso.svg?48694808#tonovaso') format('svg');
   }
 }
 */
@@ -89,9 +89,21 @@
 .icon-ok-circled:before { content: '\e81f'; } /* '' */
 .icon-ok-circled2:before { content: '\e820'; } /* '' */
 .icon-basket:before { content: '\e821'; } /* '' */
+.icon-help:before { content: '\e822'; } /* '' */
+.icon-help_outline:before { content: '\e823'; } /* '' */
+.icon-sync:before { content: '\e824'; } /* '' */
+.icon-arrow_drop_up:before { content: '\e825'; } /* '' */
 .icon-arrow_downward:before { content: '\e826'; } /* '' */
 .icon-keyboard_arrow_left:before { content: '\e827'; } /* '' */
 .icon-keyboard_arrow_right:before { content: '\e828'; } /* '' */
+.icon-file_upload:before { content: '\e829'; } /* '' */
+.icon-search:before { content: '\e82a'; } /* '' */
+.icon-bookmark_border:before { content: '\e82b'; } /* '' */
+.icon-star_border:before { content: '\e82c'; } /* '' */
+.icon-border_color:before { content: '\e82d'; } /* '' */
+.icon-favorite_border:before { content: '\e82e'; } /* '' */
+.icon-sort:before { content: '\e82f'; } /* '' */
+.icon-sort_by_alpha:before { content: '\e830'; } /* '' */
 .icon-spin5:before { content: '\e838'; } /* '' */
 .icon-pagseguro:before { content: '\ebd7'; } /* '' */
 .icon-facebook-messenger:before { content: '\ebd8'; } /* '' */
