Melhorado o OrderItem e OrderList com suporte para buscas por nome

--- a/_src/css/order-item.css
+++ b/_src/css/order-item.css
@@ -87,6 +87,8 @@
 
 .OrderItem-body {
 	display: none;
+	-webkit-flex-flow: column;
+	flex-flow: column;
 }
 
 .OrderItem.is-showingMore .OrderItem-body {
