--- a/_src/css/order-ticket-item.css
+++ b/_src/css/order-ticket-item.css
@@ -2,12 +2,60 @@
 /* Order Ticket Item */
 
 .OrderTicketItem {
+	-webkit-align-items: center;
+	align-items: center;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
 	-webkit-justify-content: space-between;
 	justify-content: space-between;
+	margin-bottom: .5em;
 	width: 100%;
+}
+
+.OrderTicketItem-description {
+	font-size: .875em;
+	font-weight: 900;
+	max-width: 10rem;
+}
+
+.OrderTicketItem-id {
+	color: #424242;
+}
+
+.OrderTicketItem-shippingButton {
+	background-color: #03a9f4;
+	border-radius: 2px;
+	border: none;
+	cursor: pointer;
+	padding: .5em .75em;
+	text-transform: uppercase;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+
+.OrderTicketItem-shippingButton:hover {
+	background-color: #81d4fa;
+}
+
+.OrderTicketItem-shippingButton:focus,
+.OrderTicketItem-shippingButton:active {
+	background-color: #039be5;
+}
+
+.OrderTicketItem.is-shipped .OrderTicketItem-shippingButton {
+	cursor: not-allowed;
+	background-color: #bdbdbd;
+}
+
+.OrderTicketItem-shippingButton span {
+	color: #ffffff;
+	font-weight: 700;
 }
