--- a/_src/css/order-ticket-item.css
+++ b/_src/css/order-ticket-item.css
@@ -4,6 +4,7 @@
 .OrderTicketItem {
 	-webkit-align-items: center;
 	align-items: center;
+	border-radius: 3px;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
@@ -14,13 +15,14 @@
 	-webkit-justify-content: space-between;
 	justify-content: space-between;
 	margin-bottom: .5em;
+	padding: .5em;
 	width: 100%;
 }
 
 .OrderTicketItem-description {
 	font-size: .875em;
 	font-weight: 900;
-	max-width: 10rem;
+	/*max-width: 10rem;*/
 }
 
 .OrderTicketItem-id {
